--- a/module2-solution/stylesheets.css
+++ b/module2-solution/stylesheets.css
@@ -40,8 +40,7 @@ h1{
 
 .item-title{
   position: absolute;
-  font-family: monospace;
-  font-style: oblique;
+  font-family: sans-serif;
   top:0;
   right: 0px;
   padding: 6px 90px;
